problem persists in dpq

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "files.associations": {
         "complex": "cpp",
-        "ostream": "cpp"
+        "ostream": "cpp",
+        "core": "cpp"
     }
 }
