SA method N dependence done

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -100,5 +100,6 @@
         "print": "cpp",
         "queue": "cpp",
         "stack": "cpp"
-    }
+    },
+    "editor.suggest.showWords": false
 }
