--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -99,7 +99,12 @@
         "locale": "cpp",
         "print": "cpp",
         "queue": "cpp",
-        "stack": "cpp"
+        "stack": "cpp",
+        "expected": "cpp",
+        "format": "cpp",
+        "spanstream": "cpp",
+        "stacktrace": "cpp",
+        "stdfloat": "cpp"
     },
     "editor.suggest.showWords": false
 }
